Thu Sep 24 21:00:03 GMT 2015  Olly Betts <olly@survex.com>

	* src/aventreectrl.cc,src/mainfrm.h: If we're animating, don't try to
	  update station info based on mouse movement over the survey tree.

Wed Sep 23 05:16:53 GMT 2015  Olly Betts <olly@survex.com>

	* survex.iss.in: On Vista or later, the installer requires admin
	  privileges, so don't try to set up the registry conditional on
	  whether we are or not.

Wed Sep 23 00:45:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Fix compiler warning.

Wed Sep 23 00:31:40 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.24.

Wed Sep 23 00:23:19 GMT 2015  Olly Betts <olly@survex.com>

	* src/aven.cc: Add workaround for therion's assumptions about the
	  "Process" file association.

Tue Sep 22 20:59:41 GMT 2015  Olly Betts <olly@survex.com>

	* lib/sk.po: Fix clashing menu accelerators.

Tue Sep 22 20:52:33 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Update stats for CUCC dataset.

Tue Sep 22 20:42:02 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Add FIXME for wording of "Full Screen Mode" menu
	  item on OS X.

Mon Sep 21 07:25:37 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/cavernlog.h: If wx was built with thread
	  support, aven now runs cavern from a separate thread, which
	  works better under wxMSW (where we can't use select), and seems
	  a bit smoother on Linux.

Sun Sep 20 06:50:53 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Document anonymous stations in the manual, based on
	  the text from NEWS.  Reported by Wookey.

Sat Sep 19 03:54:39 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Use utf8_str() instead of fn_str() for the filename
	  to pass to the img library.

Sat Sep 19 03:08:28 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Hide the OpenGL window when we show the log window,
	  to fix issues with the OpenGL window still showing up under wxMSW.
